Fix: form fieldes is too close to the scroll bar

--- a/src/styles/search-recipes-form.scss
+++ b/src/styles/search-recipes-form.scss
@@ -1,6 +1,7 @@
 .SearchRecipesForm {
   max-height: calc(70vh);
   overflow: auto;
+  padding: 0 0.5rem;
 
   .form {
     input,
